banner section completed

--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <link rel="stylesheet" href="resources/css/style.css">
 </head>
 <body>
+    <div class="banner">
+        <div class="container-banner-part">
+        <div class="banner-part-1">
+
+        </div>
+        <div class="banner-part-2">
+            <h3>All Thinks Are<br>Possible If You <br> believe</h3>
+             <p>There are many variations of passages of Lorem Ipsum 
+                <br> available, but the majority have suffered alteration in 
+                some <br> form, by injected humour, or randomised words</p>
+             <div class="button-primary"><button><span>Contact Us</span></button> </div>
+        </div>
+    </div>
+
+    </div>
 
     
 </body>
