First Assignment Successully Completed

--- a/index.html
+++ b/index.html
@@ -88,6 +88,33 @@
 
     </div>
 
+     <!-- footer section start here -->
+     <footer>
+
+        <div class="final-part">
+            <div class="future-part">
+                <h3>Future</h3>
+                    <p>There are many variations of passages of Lorem Ipsum <br> available, but the majority have suffered alteration in some <br>form, by injected humour, or randomised words</p>
+                    <address> Email : info@gmail.com <br><br>
+                       Phone : 01500 00 00 00</address>
+                        <div class="image"><img src="resources/images/icons/fb.png" alt=""></div>
+                        <img src="resources/images/icons/twitter.png" alt="">
+                        <img src="resources/images/icons/youtube.png" alt="">
+
+                    
+            </div>
+            <div class="subscribe-part">
+                <h3>Subscribe</h3>
+                <form>
+                    <label for=""></label>
+                    <input type="text" placeholder="Enter your email">
+                </form>
+                <button>Subscribe</button>
+
+            </div>
+        </div>
+     </footer>
+
 
 
 
